Clean up code in VarInt64.*test
This clears up warnings sent from IntelliJ