@@ -20,6 +20,7 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -44,16 +45,16 @@ public class VarInt64LoopTest {
 
 	public void setupProblemChildren() {
 		problemChildren.put(-624485L, new byte[]{(byte) 0x9B, (byte) 0xF1, (byte) 0x59});
-		problemChildren.put(new Long(0), new byte[]{0x00});
-		problemChildren.put(new Long(1), new byte[]{0x01});
-		problemChildren.put(new Long(2), new byte[]{0x02});
-		problemChildren.put(new Long(-1), new byte[]{0x7F});
+		problemChildren.put(0L, new byte[]{0x00});
+		problemChildren.put(1L, new byte[]{0x01});
+		problemChildren.put(2L, new byte[]{0x02});
+		problemChildren.put(-1L, new byte[]{0x7F});
 		problemChildren.put(134217728L,
 			new byte[]{(byte) 0x80, (byte) 0x80, (byte) 0x80, (byte) 0xC0, (byte) 0x00});
 		problemChildren.put(-1066294073546240435L,
 			new byte[]{(byte) 0xCD, (byte) 0x9C, (byte) 0xB0, (byte) 0xC1, (byte) 0x88,
 				(byte) 0xE6, (byte) 0xF0, (byte) 0x99, (byte) 0x71});
-		problemChildren.put(new Long(4294967295L),
+		problemChildren.put(4294967295L,
 			new byte[]{(byte) 0xFF, (byte) 0xFF, (byte) 0xFF, (byte) 0xFF, (byte) 0x0F});
 		//problemChildren.put(2368947463459826787L, new byte[] { (byte) 0xFF, (byte) 0xFF, (byte)
 		// 0xFF, (byte) 0xFF });
@@ -103,14 +104,14 @@ public class VarInt64LoopTest {
 			if (expected[i] != actual[i]) {
 				equal = false;
 				throw new AssertionError(
-					"Array not equals" + "expected " + expected.toString() + " actual = "
-					+ actual.toString());
+					"Array not equals" + "expected " + Arrays.toString(expected) + " actual = "
+					+ Arrays.toString(actual));
 			}
 		}
 	}
 
 	private void assertEqualHex(Long expected, Long result) {
-		assertEquals(new Long(expected), result,
+		assertEquals(expected, result,
 			"i = " + expected.toString() + " hex = " + Long.toHexString(expected));
 	}
 
@@ -128,7 +129,7 @@ public class VarInt64LoopTest {
 			VarInt64 varInt64_b = new VarInt64(bytesFile);
 			Long result_b = varInt64_b.longValue();
 
-			assertEquals(new Long(i), result_b,
+			assertEquals(Long.valueOf(i), result_b,
 				"i = " + i.toString() + " hex = " + Long.toHexString(i));
 		}
 	}
